[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm-chain-id",
	"frame/evm-system",
	"frame/hotfix-sufficients",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/storage",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"template/node",
	"template/runtime",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[workspace.dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
environmental = { version = "1.1.3", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.37.0", default-features = false }
jsonrpsee = "0.16.2"
kvdb-rocksdb = "0.17.0"
libsecp256k1 = "0.7.1"
parity-db = "0.4.2"
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate Client
sc-basic-authorship = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-cli = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-client-db = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-consensus = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-consensus-manual-seal = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-keystore = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-network = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-network-common = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-rpc = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-rpc-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-telemetry = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
# Substrate Primitive
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-database = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sp-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-inherents = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-io = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-keyring = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
sp-offchain = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-session = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-state-machine = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-std = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-storage = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-timestamp = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-trie = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
sp-version = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
# Substrate FRAME
frame-benchmarking = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
frame-executive = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
frame-support = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
frame-system = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
frame-system-benchmarking = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-aura = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-balances = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-sudo = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-timestamp = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-transaction-payment = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
pallet-utility = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38", default-features = false }
# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
substrate-build-script-utils = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
substrate-frame-rpc-system = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
substrate-test-runtime-client = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
substrate-wasm-builder = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
# Frontier Client
fc-cli = { version = "1.0.0-dev", path = "client/cli" }
fc-consensus = { version = "2.0.0-dev", path = "client/consensus" }
fc-db = { version = "2.0.0-dev", path = "client/db" }
fc-mapping-sync = { version = "2.0.0-dev", path = "client/mapping-sync" }
fc-rpc = { version = "2.0.0-dev", path = "client/rpc" }
fc-rpc-core = { version = "1.1.0-dev", path = "client/rpc-core" }
fc-storage = { version = "1.0.0-dev", path = "client/storage" }
# Frontier Primitive
fp-consensus = { version = "2.0.0-dev", path = "primitives/consensus", default-features = false }
fp-dynamic-fee = { version = "1.0.0", path = "primitives/dynamic-fee", default-features = false }
fp-ethereum = { version = "1.0.0-dev", path = "primitives/ethereum", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "primitives/evm", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "primitives/self-contained", default-features = false }
fp-storage = { version = "2.0.0", path = "primitives/storage", default-features = false }
# Frontier FRAME
pallet-base-fee = { version = "1.0.0", path = "frame/base-fee", default-features = false }
pallet-dynamic-fee = { version = "4.0.0-dev", path = "frame/dynamic-fee", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", path = "frame/ethereum", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "frame/evm", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "frame/evm-chain-id", default-features = false }
pallet-evm-system = { version = "6.0.0-dev", path = "frame/evm-system", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", path = "frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", path = "frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { version = "1.0.0", path = "frame/hotfix-sufficients", default-features = false }
# Frontier Template
frontier-template-runtime = { path = "template/runtime", default-features = false }
