[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
sp-consensus = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sc-consensus = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
log = "0.4.8"
futures = { version = "0.3.17", features = ["compat"] }
sp-timestamp = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
derive_more = "0.99.2"
prometheus-endpoint = { version = "0.10.0-dev", package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate" }
async-trait = "0.1"