[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
parking_lot = "0.12.0"

codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
sc-client-db = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-database = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }

fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

kvdb-rocksdb = { version = "0.15.2", optional = true }
parity-db = { version = "0.3.13", optional = true }

[features]
default = ["kvdb-rocksdb", "parity-db"]
