[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Mapping sync logic for Frontier."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "1a30fa2" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fc-consensus = { version = "2.0.0-dev", path = "../consensus" }
fc-db = { version = "2.0.0-dev", path = "../db" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"
