[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
ethereum = { version = "0.12.0", features = ["with-codec"] }
ethereum-types = "0.13.1"
evm = "0.35.0"
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpsee = { version = "0.13.0", features = ["server"] }
jsonrpsee-types = "0.13.0"
serde_json = "1.0"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.7.5"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.14", features = ["sync"] }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-network = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-rpc = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-service = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-storage = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
beefy-primitives = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sc-client-db = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
sp-consensus = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", rev = "6913e07" }
tempfile = "3.3.0"

[features]
rpc_binary_search_estimate = []
