[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
ethereum = { version = "0.12.0", features = ["with-codec"] }
ethereum-types = "0.13.1"
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master" }
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.7"
log = "0.4.17"
lru = "0.7.5"
prometheus = { version = "0.13.1", default-features = false }
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.18", features = ["sync"] }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-network = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-rpc = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-io = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-storage = { git = "https://github.com/humanode-network/substrate", branch = "master" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
beefy-primitives = { git = "https://github.com/humanode-network/substrate", branch = "master" }
frontier-template-runtime = { path = "../../template/runtime", default-features = false, features = ["std", "aura"] }
sc-block-builder = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/humanode-network/substrate", branch = "master" }
tempfile = "3.3.0"

[features]
rpc_binary_search_estimate = []
